k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookvault-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookvault-api
  template:
    metadata:
      labels:
        app: bookvault-api
    spec:
      containers:
        - name: api
          image: "${DOCKERHUB_USERNAME}/bookvault-api:latest"
          ports:
            - containerPort: 8000
