k8s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookvault-db
spec:
  selector:
    matchLabels:
      app: bookvault-db
  template:
    metadata:
      labels:
        app: bookvault-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
