k8s/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookvault-api
spec:
  selector:
    app: bookvault-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
