k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookvault-db
spec:
  selector:
    app: bookvault-db
  ports:
    - port: 5432
      targetPort: 5432
